Database injection edits